objects/vlocity_cmt__BusinessSiteOffering__c.object
<CustomObject>
    <description>Site offerings enable you to describe the different types of services available at a given site. In the communications industry, these are typically types of services offered at a retail store such as bill payment and equipment returns, but could also represent products generally available at that store. In the public sector, these represent the benefits and services provided at the service provider&apos;s site such as counseling services, shelter or food distribution.</description>
    <fields>
        <fullName>DerivationTechnicalCenterAddress__c</fullName>
        <description>Takes the concatenation of the street name with the street number of the derivation technical center.</description>
        <formula>DerivationTechnicalCenter__r.vlocity_cmt__StreetAddress__c  &amp; &apos; &apos; &amp; DerivationTechnicalCenter__r.PointOfSaleAddressNumber__c</formula>
        <label>Derivation technical center address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DerivationTechnicalCenterProvince__c</fullName>
        <description>Takes the location/city of the derivation technical center.</description>
        <formula>DerivationTechnicalCenter__r.vlocity_cmt__State__c</formula>
        <label>Derivation technical center province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DerivationTechnicalCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store the technical center that would receive the derivation of a technical service for tech care.</description>
        <label>Derivation technical center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El Taller no existe o no coincide con los criterios de filtro.</errorMessage>
            <filterItems>
                <field>vlocity_cmt__BusinessSite__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Taller de ST</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipName>Store_Offerings_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Used to indicate the order of derivation of an technical service y Tech Care.</description>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BusinessSiteId__c</fullName>
        <label>Business Site</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipName>SiteServicesProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SiteServicesProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductName__c</fullName>
        <formula>vlocity_cmt__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Site Offering</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Offerings</pluralLabel>
    <recordTypes>
        <fullName>Derivation_technical_center</fullName>
        <active>true</active>
        <description>Used to handle the derivation technical centers in tech care.</description>
        <label>Derivation technical center</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>